--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8" />
@@ -6,7 +6,7 @@
         <link rel='icon' type='image/x-icon' href='/favicon.ico' />
         <script type="text/javascript" src="/app1.js"></script>
     </head>
-<body>
+    <body>
 
-</body>
+    </body>
 </html>
