--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Untitled-1</title>
         <link rel='icon' type='image/x-icon' href='/favicon.ico' />
-        <script type="text/javascript" src="/app1.js"></script>
+        <script type="text/javascript" src="/app.js"></script>
     </head>
     <body>
 
