--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,11 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Untitled-1</title>
-        <link rel='icon' type='image/x-icon' href='/favicon.ico' />
+        <title>Hello world!</title>
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <script type="text/javascript" src="/app.js"></script>
     </head>
     <body>
-
     </body>
 </html>
