--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Hello world!</title>
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-        <script type="text/javascript" src="/app.js"></script>
+        <script type="text/javascript" src="/app.ts"></script>
     </head>
     <body>
     </body>
