--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Hello world!</title>
-        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
-        <script type="text/javascript" src="/app.ts"></script>
+        <title></title>
+        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
+        <script type="text/javascript" async src="./app.ts"></script>
     </head>
     <body>
     </body>
